# vectrex-dev

./: .gitignore  CHANGES.md  README.md  install-vectrec.sh  make-vectrec.sh
samples/: cavern.c  hello_world.c  moving_cube.c  scalar.c  starfield.c
tools/: README.md  compile.sh  install.sh
tutorial-code/: README.md
tutorial-code/tutorial1/: tutorial1-chapter-01.c  tutorial1-chapter-02.c  tutorial1-chapter-03.c  tutorial1-chapter-04.c  tutorial1-chapter-05.c  tutorial1-chapter-06.c  tutorial1-chapter-07.c  tutorial1-chapter-08.c  tutorial1-chapter-09.c  tutorial1-chapter-10-with-sound.c  tutorial1-chapter-10.c
vec2x/: CMakeLists.txt
vec2x-linux/: CMakeLists.txt
vec2x-linux/src/: e6809.c  vec2x.c  vec2x.h  vec2x_platform.c  vec2x_platform.h
vec2x-linux/src/sdl/: SDL_gfx_5x7_fnt.h  SDL_gfx_5x8_fnt.h  SDL_gfx_6x12_fnt.h  SDL_gfx_6x13_fnt.h  SDL_gfx_6x9_fnt.h  SDL_gfx_7x13B_fnt.h  SDL_gfx_7x13_fnt.h  SDL_gfx_7x14B_fnt.h  SDL_gfx_8x13O_fnt.h  SDL_gfx_9x15B_fnt.h  SDL_gfx_9x15_fnt.h  SDL_gfx_9x18B_fnt.h  SDL_gfx_fnt.h
vec2x/build2/: CMakeCache.txt  cmake_install.cmake
vec2x/build2/CMakeScripts/: ReRunCMake.make
vec2x/build2/vec2x.xcodeproj/: project.pbxproj
vec2x/build3/: CMakeCache.txt  cmake_install.cmake
vec2x/build3/CMakeScripts/: ReRunCMake.make
vec2x/build3/Debug/vec2x.app/Contents/: Info.plist
vec2x/build3/Debug/vec2x.app/Contents/MacOS/: vec2x
vec2x/build3/vec2x.xcodeproj/: project.pbxproj
vec2x/cmake/: xxFindSDL2_image.cmake
vec2x/src/: vec2x_platform.c
vec2x/src/sdl/: SDL_gfx_10x20_fnt.h  SDL_gfx_6x10_fnt.h  SDL_gfx_6x13B_fnt.h  SDL_gfx_6x13O_fnt.h  SDL_gfx_7x13O_fnt.h  SDL_gfx_7x14_fnt.h  SDL_gfx_8x13B_fnt.h  SDL_gfx_8x13_fnt.h  SDL_gfx_9x18_fnt.h
vectrec/: compile-linux.sh  compile-macos.sh  compile.sh  install-vectrec.sh  install-vectrec_macos.sh  start-linux.sh  start-macos.sh
vectrec-binaries/: compile-macos.sh  start-macos.sh
vectrec-binaries/linux/: lwar  lwasm  lwlink  lwobjdump  vec2x
vectrec-binaries/linux/stdlib/: DIV16.ecb_o  DIV8.asm  DIV8BY7.asm  LINBUF.asm  LINBUF.dgn_o  MUL168_TO32.os9_o  MUL16BY10.asm  Makefile  Makefile.in  SDIV16.os9_o  _FinishIntegerToASCII.ecb_o  addDWordDWord.asm  addDWordUnsignedInt.os9_o  addIntDWord.dgn_o  andDWordWord.asm  atoul.os9_o  attr.c  attr.dgn_o  bsearch.os9_o  checknull.asm  cmpDWordSignedInt.asm  cmpDWordUnsignedInt.asm  cmpSignedIntDWord.asm  cmpUnsignedIntDWord.asm  cmpUnsignedIntDWord.dgn_o  coldStart.c  coldStart.dgn_o  coldStart.ecb_o  convertABToUpperCase.asm  crt.os9_o  crt.usim_o  delay.dgn_o  divModDWordDWord.dgn_o  dwtoa.vec_o  inkey.dgn_o  isDWordZero.asm  isDWordZero.os9_o  isKeyPressed.c  isKeyPressed.dgn_o  leftShiftDWord.asm  (+63 more)
vectrec-binaries/macos-arm/: cmoc  lwar  lwasm  lwlink  lwobjdump  vec2x
vectrec-binaries/macos-arm/stdlib/: DIV16BY10.asm  DIV32.asm  DIV32.vec_o  DIV8.usim_o  LINBUF.usim_o  MUL16.asm  MUL168_TO24.ecb_o  MUL16BY10.os9_o  MUL32.asm  Makefile  Makefile.am  _FinishIntegerToASCII.os9_o  addDWordDWord.ecb_o  addDWordInt.asm  adddww.asm  andDWordDWord.asm  atoi.asm  atoi.dgn_o  atol.usim_o  atoul.c  attr.ecb_o  bsearch.ecb_o  bsearch.usim_o  checknull.ecb_o  cls.c  cls.dgn_o  cmpdww.asm  copyDWord.usim_o  copyDWordFromXToD.asm  copyMem.os9_o  delay.os9_o  delay.usim_o  disk.ecb_o  divDWordDWord.asm  divModDWordDWord.asm  divModDWordUnsignedInt.asm  divModDWordUnsignedInt.usim_o  divModUnsignedIntDWord.os9_o  divUnsignedIntDWord.dgn_o  divdwb.os9_o  (+74 more)
vectrec-binaries/macos-intel/: cmoc  lwar  lwasm  lwlink  lwobjdump  vec2x
vectrec-binaries/macos-intel/stdlib/: ATOW.asm  ATOW.vec_o  DIV16.asm  DIV16BY10.ecb_o  DIV8BY7.usim_o  MUL16.usim_o  MUL168_TO24.asm  MUL168_TO32.asm  MUL32.dgn_o  Makefile  Makefile.in  SDIV16.asm  SDIV8.asm  SDIV8.ecb_o  _FinishIntegerToASCII.c  _FinishIntegerToASCII.usim_o  addDWordInt.usim_o  addDWordUnsignedInt.asm  addIntDWord.asm  addUnsignedIntDWord.asm  addUnsignedIntDWord.os9_o  adddww.dgn_o  andDWordDWord.ecb_o  andDWordWord.ecb_o  atol.c  atol.os9_o  atoui.asm  atoui.usim_o  atoul.ecb_o  bsearch.c  checknull.os9_o  checkstack.asm  checkstack.dgn_o  checkstack.os9_o  cls.ecb_o  cmpDWordDWord.asm  cmpDWordDWord.dgn_o  cmpDWordSignedInt.ecb_o  cmpDWordUnsignedInt.usim_o  cmpSignedIntDWord.os9_o  (+161 more)
vectrec-binaries/macos-intel/stdlib/vectrex/: bios.h  compatibility.h  types.h
vectrec-source/: build-vectrec.sh  install-dep.sh
vectrec/sample/: main.c
